force-app/main/default/objects/Form_Builder__Titan_Docgen_Log__c/fields/Form_Builder__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Generate</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
            <value>
                <fullName>Interactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>