force-app/main/default/objects/Form_Builder__Titan_Docgen_Log__c/fields/Form_Builder__Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Document_Name__c</fullName>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>