force-app/main/default/objects/Form_Builder__Titan_Docgen_Log__c/fields/Form_Builder__File_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>