force-app/main/default/objects/Form_Builder__Titan_Docgen_Log__c/fields/Form_Builder__Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The salesforce user whom generated the document</inlineHelpText>
    <label>Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Titan_Docgen_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>