force-app/main/default/objects/Form_Builder__Titan_Docgen_Log__c/fields/Form_Builder__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__IP_Address__c</fullName>
    <label>IP Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>