force-app/main/default/objects/Form_Builder__Titan_Docgen_Log__c/fields/Form_Builder__Is_Interactive__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Is_Interactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when using interactive view</inlineHelpText>
    <label>Is Interactive</label>
    <type>Checkbox</type>
</CustomField>