force-app/main/default/objects/Form_Builder__Titan_Docgen_Log__c/fields/Form_Builder__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>