force-app/main/default/objects/Form_Builder__Titan_Docgen_Log__c/fields/Form_Builder__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Template_Id__c</fullName>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>